--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -34,7 +34,7 @@ packages:
 - "python3"
 remotes:
 - "url": "https://github.com/Game-Frag/game-frag-coin.git"
-  "dir": "gamefrag"
+  "dir": "game-frag-coin"
 files: []
 script: |
   set -e -o pipefail
