--- a/contrib/gitian-descriptors/gitian-osx.yml
+++ b/contrib/gitian-descriptors/gitian-osx.yml
@@ -30,7 +30,7 @@ packages:
 - "fonts-tuffy"
 remotes:
 - "url": "https://github.com/Game-Frag/game-frag-coin.git"
-  "dir": "gamefrag"
+  "dir": "game-frag-coin"
 files:
 - "Xcode-11.3.1-11C505-extracted-SDK-with-libcxx-headers.tar.gz"
 script: |
