--- a/contrib/debian/examples/gamefrag.conf
+++ b/contrib/debian/examples/gamefrag.conf
@@ -39,6 +39,45 @@
 # Use as many addnode= settings as you like to connect to specific peers
 #addnode=69.164.218.197
 #addnode=10.0.0.2:42020
+#External GameFrag IPV4
+addnode=199.127.140.224:42020
+addnode=199.127.140.225:42020
+addnode=199.127.140.228:42020
+addnode=199.127.140.231:42020
+addnode=199.127.140.233:42020
+addnode=199.127.140.235:42020
+addnode=199.127.140.236:42020
+
+#External GameFrag IPV6
+addnode=[2604:6800:5e11:3611::1]:42020
+addnode=[2604:6800:5e11:3611::2]:42020
+addnode=[2604:6800:5e11:3612::4]:42020
+addnode=[2604:6800:5e11:3613::2]:42020
+addnode=[2604:6800:5e11:3613::5]:42020
+addnode=[2604:6800:5e11:3614::1]:42020
+addnode=[2604:6800:5e11:3614::2]:42020
+addnode=[2604:6800:5e11:3614::3]:42020
+addnode=[2604:6800:5e11:3614::4]:42020
+
+#External WhiteListing IPV4
+whitelist=199.127.140.224
+whitelist=199.127.140.225
+whitelist=199.127.140.228
+whitelist=199.127.140.231
+whitelist=199.127.140.233
+whitelist=199.127.140.235
+whitelist=199.127.140.236
+
+#External WhiteListing IPV6
+whitelist=[2604:6800:5e11:3611::1]
+whitelist=[2604:6800:5e11:3611::2]
+whitelist=[2604:6800:5e11:3612::4]
+whitelist=[2604:6800:5e11:3613::2]
+whitelist=[2604:6800:5e11:3613::5]
+whitelist=[2604:6800:5e11:3614::1]
+whitelist=[2604:6800:5e11:3614::2]
+whitelist=[2604:6800:5e11:3614::3]
+whitelist=[2604:6800:5e11:3614::4]
 
 # Alternatively use as many connect= settings as you like to connect ONLY to specific peers
 #connect=69.164.218.197
